# libpipe

./: .project  CHANGELOG.txt  CMakeLists.txt  LICENSE  LICENSE.txt  README.txt  SOURCE_PREAMBLE  index.html  style.css
cmake/: Suppression_for_Helgrind.txt
cmake/macros/: LibpipeConfig.cmake.in
cmake/scripts/: coverage.sh.in  unit_coverage.sh.in
doc/: Doxyfile.cmake  Mainpage.hpp  doxygen.css  header.html  installation.hpp  usage.hpp
examples/: CMakeLists.txt  example-matrices.cpp  example-rtc.cpp  example-strings-mtime.cpp  example-uppercase-strings.cpp  inputFile.txt.cmake  inputFile2.txt.cmake  inputFileConnectionJSONMatrix.txt.cmake  inputFileFilter.txt.cmake  inputFileFilterJSONMatrix.txt.cmake  inputFileParametersJSON.txt.cmake  inputFileParametersJSONMatrix.txt.cmake  inputFilePipelineJSON.txt.cmake  inputFilePipelineJSONMatrix.txt.cmake  testFilters.cpp  walltime.h
html/: _algorithm_factory_8hpp_source.html  _basic_filter_8hpp_source.html  _config_8cpp_source.html  _config_8hpp_source.html  _config_j_s_o_n_8cpp_source.html  _config_j_s_o_n_8hpp_source.html  _data_8cpp_source.html  _data_8hpp_source.html  _exception_8cpp_source.html  _exception_8hpp_source.html  _factory_8hpp_source.html  _mainpage_8hpp_source.html  _manager_factory_8hpp_source.html  _modification_time_manager_8cpp_source.html  _modification_time_manager_8hpp_source.html  _parameters_8cpp_source.html  _parameters_8hpp_source.html  _pipeline_loader_8cpp_source.html  _pipeline_loader_8hpp_source.html  _request_8cpp_source.html  _request_8hpp_source.html  _request_exception_8hpp_source.html  _singleton_8hpp_source.html  _time_8cpp_source.html  _time_8hpp_source.html  annotated.html  class_____s_i_z_e___t_y_p_e____.html  class___ios___fmtflags.html  class___ios___iostate.html  class___safe__sequence.html  class___safe__sequence__inherit__graph.map  class___safe__sequence__inherit__graph.md5  class___vector__impl.html  class___words.html  class_char.html  class_combine_algorithm-members.html  class_combine_algorithm.html  class_combine_algorithm__coll__graph.md5  class_combine_algorithm__inherit__graph.map  class_combine_algorithm__inherit__graph.md5  (+377 more)
html/search/: all_5f.html  all_61.html  all_62.html  all_63.html  all_64.html  all_65.html  all_66.html  all_67.html  all_68.html  all_69.html  all_6b.html  all_6c.html  all_6d.html  all_6e.html  all_6f.html  all_70.html  all_71.html  all_72.html  all_73.html  all_74.html  all_75.html  all_76.html  all_77.html  all_78.html  all_7a.html  all_7e.html  classes_5f.html  classes_61.html  classes_62.html  classes_63.html  classes_64.html  classes_65.html  classes_66.html  classes_67.html  classes_68.html  classes_69.html  classes_6c.html  classes_6d.html  classes_6e.html  classes_6f.html  (+129 more)
include/: CMakeLists.txt
include/libpipe/: Algorithm.hpp  AlgorithmRTC.hpp  BasicFilter.hpp  BasicFilterRTC.hpp  Exception.hpp  Filter.hpp  FilterRTC.hpp  LibpipeFactories.hpp  Log.hpp  Manager.hpp  ManagerRTC.hpp  ModificationTimeManager.hpp  NonCopyable.hpp  Pipeline.hpp  Request.hpp  RequestException.hpp  SharedData.hpp  config.hpp.cmake
include/libpipe/RTC/: AlgorithmRTC.hpp  FilterRTC.hpp  LibpipeFactories.hpp  ManagerRTC.hpp
include/libpipe/algorithm/: Algorithm.hpp
include/libpipe/ctc/: Algorithm.hpp  BasicFilter.hpp  Filter.hpp  Manager.hpp  ModificationTimeManager.hpp  Pipeline.hpp  SharedData.hpp
include/libpipe/pipeline/: BasicFilter.hpp  (+6 more)
include/mstk/: Algorithm.hpp  BasicFilter.hpp  Filter.hpp  FilterData.hpp  FilterType.hpp  Log.hpp  Manager.hpp  PortInformation.hpp  Request.hpp  SimpleManager.hpp
include/utilities/: Singleton.hpp
lib/: CMakeLists.txt  libconfig.patch  libconfigMacOS.patch
src/: Algorithm.cpp  AlgorithmRTC.cpp  CMakeLists.txt  Exception.cpp  Filter.cpp  FilterData.cpp  FilterRTC.cpp  Manager.cpp  ManagerRTC.cpp  ModificationTimeManager.cpp  Pipeline.cpp  PortInformation.cpp  Request.cpp  SimpleManager.cpp
src/RTC/: AlgorithmRTC.cpp  FilterRTC.cpp
src/algorithm/: Algorithm.cpp
src/ctc/: Algorithm.cpp  Filter.cpp  Manager.cpp  ModificationTimeManager.cpp  Pipeline.cpp
src/pipeline/: Filter.cpp  Manager.cpp  ModificationTimeManager.cpp  Request.cpp  SimpleManager.cpp
src/rtc/: Algorithm.cpp  Config.cpp  ConfigJSON.cpp  ConfigLibconfig.cpp  Controler.cpp  Data.cpp  Filter.cpp  LibpipeConfigLibconfig.cpp  LibpipeCreator.cpp  LibpipeLoader.cpp  LibpipePipeline.cpp  Loader.cpp  Manager.cpp  Pipeline.cpp  PipelineLoader.cpp
src/utilities/: Exception.cpp  Parameters.cpp  Time.cpp  getTimeOfDay.cpp
test/: Algorithm-test.cpp  AlgorithmRTC-test.cpp  BasicFilter-test.cpp  CMakeLists.txt  Exception-test.cpp  Factory-test.cpp  Filter-test.cpp  FilterRTC-test.cpp  Log-test.cpp  Manager-test.cpp  ManagerRTC-test.cpp  ModificationTimeManager-test.cpp  ObjectFactory-test.cpp  Pipeline-test.cpp  README  Request-test.cpp  RequestException-test.cpp  SharedData-test.cpp  SimpleManager-test.cpp  Singleton-test.cpp  TEMPLATE  create_test.py  gcov.css  memtest.py  utils.hpp  utilsRTC.hpp
test/ctc/: Algorithm-test.cpp  BasicFilter-test.cpp  Filter-test.cpp  Manager-test.cpp  ModificationTimeManager-test.cpp  Pipeline-test.cpp  SharedData-test.cpp  utils.hpp
test/rtc/: Algorithm-test.cpp  Config-test.cpp  ConfigJSON-test.cpp  ConfigLibconfig-test.cpp  Controler-test.cpp  Filter-test.cpp  LibpipeConfig-test.cpp  LibpipeConfigLibconfig-test.cpp  LibpipeCreator-test.cpp  LibpipePipeline-test.cpp  Loader-test.cpp  Manager-test.cpp  Pipeline-test.cpp  PipelineLoader-test.cpp  SharedData-test.cpp  inputFile.txt.cmake  inputFileConnectionJSON.txt.cmake  inputFileFilterJSON.txt.cmake  inputFileParametersJSON.txt.cmake  utils.hpp  wrongInputFile.txt.cmake
test/utilities/: Exception-test.cpp  Factory-test.cpp  Log-test.cpp  Parameters-test.cpp  Singleton-test.cpp  Time-test.cpp  getTimeOfDay-test.cpp
web_configurator/: index.html  inputFileConnectionJSON.txt  inputFileFilterJSON.txt  inputFileParametersJSON.txt  inputFilePipelineJSON.txt
web_configurator/inputFiles/: Connection.txt  Pipeline.txt
web_configurator/js/: CompleteFilter.js
(+54 files in other folders)
